--- a/challenges/web2/templates/contact.html
+++ b/challenges/web2/templates/contact.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+{% if success %}
+    <p>Thank you for your message. We'll get back to you shortly.</p>
+
+{% endif %}
   <h2>Deadlink submission</h2>
-  <form action="{{ url_for('deadlink') }}" method=post>
+  <form action="{{ url_for('deadlink_page') }}" method=post>
     <p>If you found a broken product, submit it here and we'll check</p>
     {{ form.hidden_tag() }}
 
