--- a/challenges/web2/templates/flask_user/login.html
+++ b/challenges/web2/templates/flask_user/login.html
@@ -4,7 +4,7 @@
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
 <h1>{%trans%}Sign in{%endtrans%}</h1>
 
-<form action="" method="POST" class="form" role="form">
+<form id="login" action="" method="POST" class="form" role="form">
     {{ form.hidden_tag() }}
 
     {# Username or Email field #}
