--- a/challenges/web2/app/templates/base.html
+++ b/challenges/web2/app/templates/base.html
@@ -7,14 +7,14 @@
     <title>Pokéball Store</title>
 
     <!-- Bootstrap -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='custom.css')}}"/>
 
     <!-- In-lining styles to avoid needing a separate .css file -->
     <style>
         hr { border-color: #cccccc; margin: 0; }
         .no-margins { margin: 0px; }
-        .with-margins { margin: 10px; }
+        . { margin: 10px; }
         .col-centered { float: none; margin: 0 auto; }
     </style>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -28,9 +28,13 @@
 
 <body>
     {% block body %}
-    <div id="header-div" class="clearfix with-margins">
-        <div class="pull-left"><a href="/"><h1 class="no-margins">MyApp</h1></a></div>
-        <div class="pull-right">
+    <div id="container" class="clearfix header-div container">
+        <div class="pull-md-left">
+            <a href="/"><h1 class="">
+                Pokéball Store
+            </h1></a>
+        </div>
+        <div class="pull-md-right user-state">
             {% if call_or_get(current_user.is_authenticated) %}
                 <a href="{{ url_for('user.profile') }}">{{ current_user.username }}</a>
                 &nbsp; | &nbsp;
@@ -41,22 +45,22 @@
         </div>
     </div>
     {% block menu %}
-    <div id="menu-div" class="with-margins">
-        <!-- <div class="pull-left"> -->
+    <nav id="menu-div" class="container navbar-light navbar bg-faded">
+        <div class="pull-md-left">
             <a href="/">Home</a>
-                &nbsp; | &nbsp;  <a href="{{ url_for('products_page') }}">Products</a>
+                &nbsp; | &nbsp; <a href="{{ url_for('products_page') }}">Products</a>
+                &nbsp; | &nbsp; <a href="{{ url_for('deadlink_page') }}">Submit Deadlinks</a>
             {% if call_or_get(current_user.is_authenticated) %}
                 &nbsp; | &nbsp; <a href="{{ url_for('user.profile') }}">User profile</a>
-                &nbsp; | &nbsp; <a href="{{ url_for('deadlink_page') }}">Submit Deadlinks</a>
             {% endif %}
-        <!-- </div> -->
+        </div>
 
-            <div class= "nav pull-right">
+        <div class= "nav pull-md-right">
             <span>Today's Poké Conversion Rate: 100 <img src="{{ url_for('static',filename='poke.png') }}"/> = </span>
             <span class="price">100</span><span class="price-sym"><img src=" {{ url_for('static', filename='poke.png') }} "/></span>
-            </div>
+        </div>
         {% if request.url_rule.endpoint == "products_page" %}
-         <div class="nav pull-right">
+         <div class="nav pull-md-right currency-dropdown-nav">
             <li class='currency-menu'>
               <form accept-charset="UTF-8" action="" id="currency_select_form" method="get">
                   <div style="margin:0;padding:0;display:inline">
@@ -85,12 +89,10 @@
             </li>
         </div>
         {% endif %}
-            <script src="{{url_for('static', filename='pokedollar.py')}}"/></script>
-    </div>
+    </nav>
     {% endblock %}
-    <hr class="no-margins"/>
 
-    <div id="main-div" class="with-margins">
+    <div id="main-div" class="container">
     {# One-time system messages called Flash messages #}
     {% block flash_messages %}
         {%- with messages = get_flashed_messages(with_categories=true) -%}
@@ -109,10 +111,9 @@
     </div>
 
     <br/>
-    <hr class="no-margins"/>
-    <div id="footer-div" class="clearfix with-margins">
-        <div class="pull-left">MokeStickers!</div>
-        <div class="pull-right">&copy; 2014 Mokepon!</div>
+    <div id="footer-div" class="clearfix container">
+        <div class="pull-md-left">MokeStickers!</div>
+        <div class="pull-md-right">&copy; 2016 Mokepon!</div>
     </div>
     {% endblock %}
 
@@ -123,7 +124,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
     <script src="{{url_for('static', filename='money.js')}}"></script>
     <script src="{{url_for('static', filename='pokedollar.js')}}"></script>
   </body>
