--- a/challenges/web2/app/templates/contact.html
+++ b/challenges/web2/app/templates/contact.html
@@ -8,13 +8,15 @@
 {% endif %}
   <h2>Deadlink submission</h2>
   <form action="{{ url_for('deadlink_page') }}" method=post>
+    <fieldset class="form-group">
     <p>If you found a broken product, submit it here and we'll check</p>
     {{ form.hidden_tag() }}
 
-    {{ form.Link.label }}
-    {{ form.Link }}
+    <label>{{ form.Link.label(class_="") }}</label>
+    {{ form.Link(class_="form-control") }}
 
-    {{ form.submit }}
+    </fieldset>
+    {{ form.submit(class_="btn btn-primary") }}
   </form>
 {% endblock %}
 
